tests/ui/variance/variance-unused-type-param.stderr
error[E0392]: type parameter `A` is never used
  --> $DIR/variance-unused-type-param.rs:6:19
   |
LL | struct SomeStruct<A> { x: u32 }
   |                   ^ unused type parameter
   |
   = help: consider removing `A`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `A` to be a const parameter, use `const A: /* Type */` instead

error[E0392]: type parameter `A` is never used
  --> $DIR/variance-unused-type-param.rs:9:15
   |
LL | enum SomeEnum<A> { Nothing }
   |               ^ unused type parameter
   |
   = help: consider removing `A`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `A` to be a const parameter, use `const A: /* Type */` instead

error: type parameter `T` is only used recursively
  --> $DIR/variance-unused-type-param.rs:14:23
   |
LL | enum ListCell<T> {
   |               - type parameter must be used non-recursively in the definition
LL |     Cons(Box<ListCell<T>>),
   |                       ^
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = note: all type parameters must be used in a non-recursive way in order to constrain their variance

error: type parameter `T` is only used recursively
  --> $DIR/variance-unused-type-param.rs:19:27
   |
LL | struct SelfTyAlias<T>(Box<Self>);
   |                    -      ^^^^
   |                    |
   |                    type parameter must be used non-recursively in the definition
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = note: all type parameters must be used in a non-recursive way in order to constrain their variance

error[E0392]: type parameter `T` is never used
  --> $DIR/variance-unused-type-param.rs:22:19
   |
LL | struct WithBounds<T: Sized> {}
   |                   ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`

error[E0392]: type parameter `T` is never used
  --> $DIR/variance-unused-type-param.rs:25:24
   |
LL | struct WithWhereBounds<T> where T: Sized {}
   |                        ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`

error[E0392]: type parameter `T` is never used
  --> $DIR/variance-unused-type-param.rs:28:27
   |
LL | struct WithOutlivesBounds<T: 'static> {}
   |                           ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`

error[E0392]: type parameter `T` is never used
  --> $DIR/variance-unused-type-param.rs:31:22
   |
LL | struct DoubleNothing<T> {
   |                      ^ unused type parameter
LL |
LL |     s: SomeStruct<T>,
   |                   - `T` is named here, but is likely unused in the containing type
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `T` to be a const parameter, use `const T: /* Type */` instead

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0392`.
